<resources>
    <string name="app_name">Herdr</string>
    <string name="facebook_app_id">346913009147179</string>
    <string name="fb_login_protocol_scheme">fb346913009147179</string>
    <string name="app_logo">App Logo</string>
    <string name="bottom_nav_my_herds">My Herds</string>
    <string name="bottom_nav_profile">Profile</string>
    <string name="bottom_nav_browse">Browse</string>
    <string name="bottom_nav_settings">Settings</string>
    <string name="herds_i_m_leading"><u>Herds I\'m Leading</u></string>
    <string name="herds_i_m_a_part_of"><u>Herds I\'m a Part Of</u></string>
    <string name="profile_picture">Profile Picture</string>
    <string name="log_out">Log Out</string>
    <string name="title">Title:</string>
    <string name="description">Description:</string>
    <string name="location">Location:</string>
    <string name="time">Time:</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="create_your_herd">Create Your Herd</string>
    <string name="create_herd">Create Herd</string>

</resources>
